senhas acrescentadas no gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 teste.py
+
+As senhas mais utilizadas nos apps de bancos bem como 
+nos logins do ubuntu são:
+
+LetsCodeMeAjudou !
+ItaúMeContratou !
